# ai-workflow-premortem-pure

./: .dockerignore  .env.demo  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEAN_PACKAGE_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LIVE_E2E_LOW_RISK_READING_PLANNER_REPORT.md  LIVE_E2E_MEDICATION_MANAGEMENT_REPORT.md  LOCAL_PREVIEW_ALIGNMENT_REPORT.md  Makefile  PACKAGE_MANIFEST.txt  PATCH_NOTES_2026-05-30.md  README.en.md  README.md  RELEASE_CLEANUP.md  ROADMAP.md  SECOND_EDITION.md  SECURITY.md  SUPPORT.md  ai_workflow_premortem_demo.html  alembic.ini  docker-compose.lite.yml  docker-compose.override.yml  docker-compose.yml  install-demo.bat  pyproject.toml  release_manifest_v1.0.md  show.md  start-demo.bat  stop-demo.bat  verify-demo.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml  test.yml
.upgrade/: MANIFEST.md  STATE.md
.upgrade/archive/: scorecard-baseline-20260713.md  show.md
.upgrade/decisions/: branch-protection.md  doc-alignment-and-frontend-polish.md  (+2 more)
alembic/: env.py
api/: limiter.py  main.py  metrics.py  schemas.py
auth/: jwt.py  password.py  permissions.py  router.py  service.py
core/: __init__.py  audit_service.py  config.py  context_manager.py  deployment_decision_engine.py  eval_comparison_service.py  eval_dataset_service.py  eval_experiment_service.py  eval_judge.py  eval_judgment_service.py  eval_llm_judge.py  eval_metrics_service.py  eval_regression_policy.py  eval_runner.py  eval_service.py  evidence_service.py  execution_mode.py  execution_service.py  models.py  oversight_service.py  redteam_service.py  report_diff.py  report_service.py  reviewed_output_service.py  safety_service.py  scenario_context.py  session_service.py  stage3_result_calculator.py  stage_advancement_contract.py  stage_advancement_coordinator.py  stage_advancement_decision.py  stage_operation_service.py  stage_readiness_service.py  stage_resolution_service.py  stage_revision_service.py  stage_scope_service.py  state.py  trace_backfill_service.py  version.py
docs/: README.md  acceptance_report.md  action-resolution-contract-v0.7-alpha.3.md  api-reference.md  architecture.md  current-status-index.md  current_project_state.md  delivery_alignment_report.md  delivery_manifest.md  demo-scenarios.md  e2e-results-summary.md  final_cleanup_notes.md  frontend_stage_advancement_consumption_audit_alpha10.md  human-oversight-v0.2.md  improvement-roadmap.md  lite-mode.md  local_setup.md  open_source_release_checklist.md  security-model.md  showcase.md  stage-advancement-contract-v0.6-alpha5.md  stage-advancement-contract-v0.6-alpha6.md  stage-advancement-operation-hardening-v0.6-alpha7.md  stage-transition-policy.md  stage3-risk-adaptive-gate.md  stage_advancement_api_return_audit_alpha10.md  stage_advancement_api_return_audit_alpha11.md  stage_advancement_contract_matrix_alpha10.md  stage_advancement_source_freeze_audit_alpha11.md  startup.md  v0.7-stage-advancement-implementation.md  v0.7.0-alpha.2-stage-advancement-closure-plan.md  v0.7.0-alpha.3-stage-advancement-finalization.md  v0.7.0-alpha.4-stage-advancement-hardening-plan.md  v0.8.0-alpha.1-eval-dataset-experiment-foundation.md  v0.8.0-alpha.2-regression-gate-integration.md  v0.8.0-alpha.3-redteam-foundation.md  v0.8.0-alpha.4-taxonomy-mapping.md  v0.8.0-alpha.5-eval-judgment-calibration.md  v0.8.0-alpha.6-trace-backfill-report-closure.md  (+11 more)
examples/: sample_project_input.md  sample_report.json  stage_gate_scenarios.json  student_course_selection_input.md  university_ai_course_qa_input.md  university_ai_mental_health_input.md
frontend/: api_client.py  app.py  labels.py  state.py
graph/: __init__.py  builder.py  edges.py  interrupt_gate.py  interrupts.py  langgraph_interrupt_runner.py  nodes.py  review_gate.py  runner.py  transition_policy.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scenarios/: __init__.py  registry.py
scripts/: README.md  doc_consistency_check.py  gen_certs.ps1  gen_certs.sh  gen_secrets.sh  live_e2e_four_stage.py  live_e2e_low_risk_room_booking.py  live_e2e_student_management.py  version_check.py
secrets.example/: deepseek_api_key  jwt_secret  tavily_api_key
stages/: __init__.py  base.py  json_prompts.py  prompts.py  raw_output_guard.py  schemas.py  stage_1_failure_mode.py  stage_2_workflow_design.py  stage_3_stress_test.py  stage_4_trigger.py  validators.py
storage/: README.md  __init__.py  cache.py  field_security.py  session_store.py
tests/: ACCEPTANCE_TEST_ALIGNMENT_ALPHA8.md  conftest.py  test_action_idempotency_v070.py  test_alpha8_doc_core_alignment_contract.py  test_api.py  test_auth.py  test_context_migrations_v070.py  test_context_migrations_v090.py  test_cross_stage_integrity.py  test_data_classification.py  test_deployment_decision.py  test_domain_labels_production.py  test_domain_profile_medical_ai.py  test_domain_profile_university_ai.py  test_e2e_scenarios.py  test_eval_dataset_v080_alpha1.py  test_eval_experiment_comparison_v080_alpha1.py  test_eval_experiment_metrics_v080_alpha1.py  test_eval_experiment_v080_alpha1.py  test_eval_regression_gate_v080_alpha2.py  test_eval_regression_policy_v080_alpha2.py  test_eval_runner.py  test_expert_review_gate_v110.py  test_field_encryption.py  test_frontend_demo_auth_flow.py  test_gate_engine_v070.py  test_gate_evaluation_records_v110.py  test_gate_report.py  test_gate_rules_pluginized_v070.py  test_governance_api_v110.py  test_graph_runner.py  test_handle_send_message_resync.py  test_health.py  test_interrupt_records.py  test_live_oversight_frontend_contract.py  test_live_oversight_marker.py  test_llm_judge_v130.py  test_llm_trace_v070.py  test_metrics_v110.py  test_mock_llm_mode.py  (+41 more)
tools/: __init__.py  evidence_filters.py  evidence_ranker.py  flag_extractor.py  material_parser.py  prompt_injection_scanner.py  risk_taxonomy.py  safety_classifier.py  search.py  source_classifier.py
(+245 files in other folders)
