# pyproject.toml
[project]
name = "ai-workflow-premortem"
version = "1.2.1"
description = "AI Workflow Premortem — pre-mortem failure-mode analysis and human oversight platform for AI projects"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "gome09" }]
keywords = ["ai-governance", "premortem", "risk-assessment", "human-oversight", "llm-evaluation", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",        # DeepSeek 兼容 OpenAI 接口
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "psycopg[binary,pool]>=3.2.0",    # PostgreSQL 异步驱动
    "langgraph-checkpoint-postgres>=2.0.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",  # T1.3 字段级静态加密（python-jose[cryptography] 已传递依赖，此处显式声明便于 pip-audit 跟踪）
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",  # T1.8 依赖漏洞审计
    "mypy>=1.14,<3",  # 基线在 2.3.0 测得；major 升级需重新核对基线
]

[project.urls]
Repository = "https://github.com/gome09/ai-workflow-premortem-pure"
Changelog = "https://github.com/gome09/ai-workflow-premortem-pure/blob/main/CHANGELOG.md"
Documentation = "https://github.com/gome09/ai-workflow-premortem-pure/blob/main/docs/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout 多顶层包。仅用于本地可编辑安装；发布 PyPI 前需 src-layout 重构（见 .upgrade/decisions）。
packages = ["api", "auth", "core", "graph", "stages", "storage", "tools", "scenarios"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
# Auth tests set env vars before imports (JWT_SECRET etc. must be set before module load).
"tests/test_auth.py" = ["E402", "I001", "S105", "S106"]
"tests/conftest.py" = ["E402"]
# tests 用 assert 是正常的，豁免 S101（assert 使用）
"tests/**" = ["S101", "S110"]
# mock_llm 模式下硬编码的 fake API key / secret，不构成真实泄露
"core/llm/adapters/mock.py" = ["S105", "S106"]
"core/llm/adapters/mock_fixtures/**" = ["S105", "S106"]
# frontend api_client 用 try/except/pass 做防御性容错（失败返回空列表），系统性模式
"frontend/api_client.py" = ["S110"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "frontend/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
# 渐进式引入（inspect_ai 模式）：全局宽松基线，核心包用 overrides 收紧
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_reexport = true
# 第三方库缺 stub 时不阻塞
ignore_missing_imports = true
# 先只检查核心逻辑包；frontend（Streamlit 脚本风格）与 tests 暂不纳入
files = ["core", "graph", "stages", "tools", "storage", "auth", "api"]
exclude = ["tests/", "frontend/", "scripts/", "examples/", "alembic/"]

[[tool.mypy.overrides]]
# 门禁引擎与状态机：确定性架构主张的核心载体，近 strict
module = ["core.gates.*", "graph.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
check_untyped_defs = true
